test/expected/explain_udl_3c_i.out
explain int operator"" _x(char, char, char)
                                      ^
39: error: user-defined literal may have at most 2 parameters
